try https for stuff

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
       font-family: "Open Sans";
       font-weight: normal;
       font-style: normal;
-      src: url('http://a1.ggtracker.com/assets/fonts/open-sans/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-           url('http://a1.ggtracker.com/assets/fonts/open-sans/OpenSans-Regular-webfont.woff') format('woff'),
-           url('http://a1.ggtracker.com/assets/fonts/open-sans/OpenSans-Regular-webfont.ttf') format('truetype'),
-           url('http://a1.ggtracker.com/assets/fonts/open-sans/OpenSans-Regular-webfont.svg#OpenSansRegular') format('svg');
+      src: url('https://a1.ggtracker.com/assets/fonts/open-sans/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+           url('https://a1.ggtracker.com/assets/fonts/open-sans/OpenSans-Regular-webfont.woff') format('woff'),
+           url('https://a1.ggtracker.com/assets/fonts/open-sans/OpenSans-Regular-webfont.ttf') format('truetype'),
+           url('https://a1.ggtracker.com/assets/fonts/open-sans/OpenSans-Regular-webfont.svg#OpenSansRegular') format('svg');
     }
 
     body {
@@ -24,7 +24,7 @@
       background: #f7f4ef;
     }
   </style>
-  <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+  <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
 </head>
 <body>
 <p>I'm David Joerg, I'm a software developer and entrepreneur in New York City.</p>
