try getting fonts locally

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
       font-family: "Open Sans";
       font-weight: normal;
       font-style: normal;
-      src: url('https://a1.ggtracker.com/assets/fonts/open-sans/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-           url('https://a1.ggtracker.com/assets/fonts/open-sans/OpenSans-Regular-webfont.woff') format('woff'),
-           url('https://a1.ggtracker.com/assets/fonts/open-sans/OpenSans-Regular-webfont.ttf') format('truetype'),
-           url('https://a1.ggtracker.com/assets/fonts/open-sans/OpenSans-Regular-webfont.svg#OpenSansRegular') format('svg');
+      src: url('fonts/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+           url('fonts/OpenSans-Regular-webfont.woff') format('woff'),
+           url('fonts/OpenSans-Regular-webfont.ttf') format('truetype'),
+           url('fonts/OpenSans-Regular-webfont.svg#OpenSansRegular') format('svg');
     }
 
     body {
