--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 
 <p>I'm now mostly retired from Two Sigma and work on personal projects:
 <ul>
-<li><a href="http://ggtracker.com">GGTracker</a>, a site for Starcraft maniacs to study their games and get better faster (2012 - 2017)</li>
-<li>Superego, a system to track and improve my sleep, exercise and time management (2014 - 2017)  As covered by <a href="http://www.wnyc.org/story/digital-addiction-how-one-guy-triumphed-after-he-hit-bottom/">WNYC</a>.</li>
+<li><a href="http://ggtracker.com">GGTracker</a>, a site for StarCraft maniacs to study their games and get better faster (2012 - 2017)</li>
+<li>Superego, a system to track and improve my sleep, exercise and time management.  Here's an article about it from <a href="http://www.wnyc.org/story/digital-addiction-how-one-guy-triumphed-after-he-hit-bottom/">WNYC</a>. (2014 - 2017)</li>
 <li><a href="http://datacollective.org">Data Collective</a>, a nonprofit which made tools to improve how data is shared on the web (2011)</li>
-<li>Competed in the <a href="https://www.kaggle.com/c/finding-elo">Finding Elo</a> contest, where we estimated a player's chess rating from the moves of a single game (2016)</li>
+<li>Competed in the <a href="https://www.kaggle.com/c/finding-elo">Finding Elo</a> contest, where contestants used Machine Learning to estimate a player's chess rating from the moves of a single game (2016)</li>
 </ul></p>
 
 <p>Now I'm working on a new kind of chess app.</p>
