--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <p>Now I'm working on a new kind of chess app.</p>
 
 <p>I served on the boards of <a href="http://www.placed.com">Placed</a> (acquired by Snap), <a href="http://whoop.com/">WHOOP</a> and currently serve on the board of <a href="https://www.arena.io/">Arena</a>.</p>
-<p>I graduated from Harvard with a degree in computer science.  My senior thesis was a <a href="thesis/chap3.html">visual programming syntax</a> for Prolog.</p>
-<p>The best way to reach me is email: dsjoerg at gmail dot com.  Also see the <a href="http://twitter.com/dsjoerg">twitters</a>.</p>
+<p>I graduated from Harvard with a degree in computer science.</p>
+<p>The best way to reach me is email: dsjoerg at gmail dot com.</p>
 </body>
 </html>
