--- a/flashcards/index.html
+++ b/flashcards/index.html
@@ -10,7 +10,7 @@
         <meta charset="utf-8"/>
 
         <!-- Set the title bar of the page -->
-        <title>Flashcards App</title>
+        <title>Let's Talk Books</title>
 
         <!-- Set the background colour of the document -->
         <style>
@@ -83,6 +83,6 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="flashcardsapp/Flashcards_App_v07_HTML.js?JRUZB=1356858881"></script>
+        <script type="text/javascript" src="letstalkbooks/Flashcards_App_v18.js?PLJAC=301899534"></script>
     </body>
 </html>
